Fix footer link color on Dark mode + update libs

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -96,6 +96,7 @@
 	--ifm-button-background-color: var(--ifm-color-tertiary);
 	--ifm-button-color: var(--ifm-color-primary-darker);
 	--ifm-button-size-multiplier: 1.6;
+	--ifm-footer-link-hover-color: var(--ifm-color-tertiary-darker);
 	--ifm-link-color: var(--ifm-color-tertiary-darker);
 	--ifm-link-hover-decoration: none;
 	--ifm-link-hover-color: var(--ifm-color-tertiary);
